Play 2.2.x support added

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,20 @@ test-result
 server.pid
 *.iml
 *.eml
+logs
+project/project
+project/target
+target
+tmp
+.history
+dist
+/.idea
+/*.iml
+/out
+/.idea_modules
+/.classpath
+/.project
+/RUNNING_PID
+.target
+.cache
+.settings
